--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ node_modules/
 /.pnp
 .pnp.js
 
+#seeder
+backend/seeder.js
+
 # testing
 /coverage
 
@@ -13,6 +16,7 @@ node_modules/
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
