--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "qs": "^6.9.6",
     "validator": "^13.5.2"
