--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tokoaz",
   "version": "1.0.0",
   "description": "MERN Online Shopping Store",
+  "engines": {
+    "node": "18.12.1"
+  },
   "main": "server.js",
   "type": "module",
   "scripts": {
